# ot-editor

./: .gitignore  CMakeLists.txt  README.md  classDiagram.mmd
.github/workflows/: release.yaml
src/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  model.cpp  model.h  primitive.cpp  primitive.h  primitive_visitor.h  renderer.cpp  renderer.h  ui_handlers.cpp  ui_handlers.h  view.cpp  view.h
